fixed scrolling text and scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,3 +123,7 @@ span {
     line-height: 1.5;
   }
 }
+
+*::-webkit-scrollbar-corner {
+  display: none;
+}
