--- a/src/app/styles/tabs/Attributes.module.css
+++ b/src/app/styles/tabs/Attributes.module.css
@@ -1,30 +1,30 @@
 .layout {
   display: flex;
   flex-direction: column;
-  height: 100%;
   gap: 15px;
 }
 
 .attributesContainer {
   overflow-x: auto;
+  overflow-y: unset;
   display: flex;
   flex-direction: column;
   gap: 15px;
   height: 100%;
   scroll-behavior: smooth;
   padding-bottom: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
   display: block;
+  height: 1.5vh;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
   background: var(--scrollbar-track);
   border-radius: 5px;
   margin: 20vw;
-  /* box-shadow: 0px 4.87554px 4.87554px rgba(0, 0, 0, 0.25); */
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
