--- a/src/app/styles/tabs/Skills.module.css
+++ b/src/app/styles/tabs/Skills.module.css
@@ -70,7 +70,7 @@
 .textScrollWrapper {
   border-radius: 10px;
   border: 3px solid var(--light-brown-accent);
-  background-color: #c3ae72;
+  background-color: var(--background);
   padding: 15px;
   overflow: hidden;
   margin-bottom: 1vh;
